--- a/README
+++ b/README
@@ -5,46 +5,47 @@ be simple, fault-tolerant, and customizable. Xpad consists of independent
 pad windows; each is basically a text box in which notes can be written.
 
 Runtime requirements:
-  cygwin-1.5.25-7
-  glib2-2.14.5-1
-  gtk2-x11-2.12.5-1
-  libICE6-1.0.4-1
-  libSM6-1.0.3-1
-  libintl8-0.15-1
-  pango-1.18.4-1
+  cygwin-1.7.0-51
+  libgcc1-4.3.2-2
+  libglib2.0_0-2.20.3-1
+  libgtk2.0_0-2.16.2-1
+  libICE6-1.0.5-10
+  libintl8-0.17-11
+  libpango1.0_0-1.24.2-1
+  libSM6-1.1.0-10
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.24-2
-  autoconf2.5-2.61-1
-  automake1.10-1.10-1
-  binutils-20060817-1
-  cygport-0.3.7-1
-  gawk-3.1.5-4
-  gcc-core-3.4.4-3
-  intltool-0.36.2-1
-  make-3.81-1
-  pkg-config-0.21-1
+  autoconf2.5-2.63-10
+  automake1.10-1.10.2-10
+  binutils-2.19.51-1
+  cygport-0.9.7-1
+  gawk-3.1.6-2
+  gcc4-core-4.3.2-2
+  gnome-common-2.26.0-2
+  intltool-0.40.6-1
+  make-3.81-2
+  pkg-config-0.23b-10
   sed-4.1.5-2
 
 Canonical website:
-  http://xpad.sourceforge.net/
+  http://mterry.name/xpad/
 
 Canonical download:
-  http://downloads.sourceforge.net/xpad/
+  http://launchpad.net/xpad/+download
 
 -------------------------------------------
 
 Build instructions:
-  unpack xpad-2.14-X-src.tar.bz2
+  unpack xpad-4.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./xpad-2.14-X.cygport all
+  cygport ./xpad-4.0-X.cygport all
 
 This will create:
-  /usr/src/xpad-2.14-X-src.tar.bz2
-  /usr/src/xpad-2.14-X.tar.bz2
+  /usr/src/xpad-4.0-X-src.tar.bz2
+  /usr/src/xpad-4.0-X.tar.bz2
 
 -------------------------------------------
 
@@ -53,43 +54,49 @@ Files included in the binary package:
   /etc/postinstall/xpad.sh
   /usr/bin/xpad.exe
   /usr/share/applications/xpad.desktop
-  /usr/share/doc/xpad-2.14/AUTHORS
-  /usr/share/doc/xpad-2.14/COPYING
-  /usr/share/doc/xpad-2.14/ChangeLog
-  /usr/share/doc/xpad-2.14/INSTALL
-  /usr/share/doc/xpad-2.14/NEWS
-  /usr/share/doc/xpad-2.14/README
-  /usr/share/doc/xpad-2.14/THANKS
-  /usr/share/doc/xpad-2.14/TODO
-  /usr/share/icons/hicolor/48x48/apps/xpad.png
+  /usr/share/doc/xpad/AUTHORS
+  /usr/share/doc/xpad/COPYING
+  /usr/share/doc/xpad/ChangeLog
+  /usr/share/doc/xpad/NEWS
+  /usr/share/doc/xpad/README
+  /usr/share/doc/xpad/THANKS
+  /usr/share/doc/xpad/TODO
   /usr/share/icons/hicolor/scalable/apps/xpad.svg
   /usr/share/locale/af/LC_MESSAGES/xpad.mo
   /usr/share/locale/bg/LC_MESSAGES/xpad.mo
+  /usr/share/locale/cs/LC_MESSAGES/xpad.mo
   /usr/share/locale/da/LC_MESSAGES/xpad.mo
+  /usr/share/locale/de/LC_MESSAGES/xpad.mo
   /usr/share/locale/en_GB/LC_MESSAGES/xpad.mo
   /usr/share/locale/es/LC_MESSAGES/xpad.mo
+  /usr/share/locale/et/LC_MESSAGES/xpad.mo
   /usr/share/locale/fi/LC_MESSAGES/xpad.mo
   /usr/share/locale/fr/LC_MESSAGES/xpad.mo
   /usr/share/locale/ga/LC_MESSAGES/xpad.mo
+  /usr/share/locale/hr/LC_MESSAGES/xpad.mo
   /usr/share/locale/hu/LC_MESSAGES/xpad.mo
   /usr/share/locale/it/LC_MESSAGES/xpad.mo
+  /usr/share/locale/ja/LC_MESSAGES/xpad.mo
   /usr/share/locale/ko/LC_MESSAGES/xpad.mo
+  /usr/share/locale/lv/LC_MESSAGES/xpad.mo
   /usr/share/locale/nl/LC_MESSAGES/xpad.mo
+  /usr/share/locale/pt/LC_MESSAGES/xpad.mo
   /usr/share/locale/ro/LC_MESSAGES/xpad.mo
   /usr/share/locale/ru/LC_MESSAGES/xpad.mo
   /usr/share/locale/rw/LC_MESSAGES/xpad.mo
   /usr/share/locale/sv/LC_MESSAGES/xpad.mo
+  /usr/share/locale/th/LC_MESSAGES/xpad.mo
+  /usr/share/locale/tr/LC_MESSAGES/xpad.mo
   /usr/share/locale/vi/LC_MESSAGES/xpad.mo
   /usr/share/locale/zh_CN/LC_MESSAGES/xpad.mo
   /usr/share/locale/zh_TW/LC_MESSAGES/xpad.mo
   /usr/share/man/man1/xpad.1.gz
-  /usr/share/pixmaps/xpad.png
 
 ------------------
 
 Port Notes:
 
------ version 2.14-1 -----
+----- version 4.0-1 -----
 Initial release for Cygwin.
 
 
